[gd_scene load_steps=12 format=2]

[ext_resource path="res://Common/ZCOOLKuaiLe-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Common/gear.png" type="Texture" id=3]
[ext_resource path="res://Settings/Settings.tscn" type="PackedScene" id=4]
[ext_resource path="res://DifficultySelect/DifficultySelect.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainMenu/fishTile_077.png" type="Texture" id=6]
[ext_resource path="res://MainMenu/fishTile_081.png" type="Texture" id=7]
[ext_resource path="res://MainMenu/fishTile_075.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "load"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 374.627, -0.25, 0, 0.25, 0, 433.36, -0.25, 0, 0.25, 0, 305.763, -0.25, 0, 0.25, 0, 374.021, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.9, 1.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Label:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -147.628, -0.25, 0, 0.25, 0, -101.594, -0.25, 0, 0.25, 0, 76.7791, -0.25, 0, 0.25, 0, 221.233, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.9, 1.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -12.0847, -0.25, 0, 0.25, 0, 6.6638, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.9, 1.6 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayButton:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -166.295, 455.306 ), Vector2( -63.1139, 444.194 ), Vector2( 24.1931, 412.446 ), Vector2( 86.1017, 352.125 ), Vector2( 146.423, 301.328 ), Vector2( 230.555, 337.838 ), Vector2( 308.338, 394.985 ), Vector2( 389.295, 456.893 ), Vector2( 457.553, 512.452 ), Vector2( 494.063, 482.292 ), Vector2( 532.161, 431.495 ), Vector2( 581.37, 372.761 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayButton:rect_rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0575, -41.6872, -16.7432, 1.20926, 15.0635, 32.3582, 16.1069, -0.0927591, -13.3292, -13.3292, 0.0 ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("SettingsButton:rect_position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 20, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1.4 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("SettingsButton:rect_position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -100, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1.4 )
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.627451, 0.709804, 0.937255, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BlueFish" type="CPUParticles2D" parent="."]
position = Vector2( -90.4817, 377.801 )
amount = 7
lifetime = 10.0
speed_scale = 2.38
randomness = 1.0
texture = ExtResource( 6 )
gravity = Vector2( 10, 0 )
initial_velocity = 175.0
initial_velocity_random = 0.28
orbit_velocity = 0.05
orbit_velocity_random = 1.0

[node name="OrangeFish" type="CPUParticles2D" parent="."]
position = Vector2( 463.521, 817.511 )
rotation = -0.523599
amount = 5
lifetime = 10.0
speed_scale = 2.38
randomness = 1.0
texture = ExtResource( 7 )
gravity = Vector2( 10, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.28
orbit_velocity = 0.05
orbit_velocity_random = 1.0

[node name="PurpleFish" type="CPUParticles2D" parent="."]
position = Vector2( 204.775, -85.7196 )
rotation = 0.523599
amount = 5
lifetime = 10.0
speed_scale = 2.38
randomness = 1.0
texture = ExtResource( 8 )
gravity = Vector2( 10, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.28
orbit_velocity = -0.05
orbit_velocity_random = 1.0

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 361.016
margin_top = 193.71
margin_right = 902.016
margin_bottom = 322.71
rect_rotation = 1.26968
rect_pivot_offset = Vector2( -113.553, -69.7693 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.215686, 0.65098, 1, 1 )
text = "Dive Bug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 559.147
margin_top = 398.953
margin_right = 695.146
margin_bottom = 472.953
rect_rotation = -6.6646
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "load"
method_call_mode = 1
anims/load = SubResource( 3 )

[node name="Settings" parent="." instance=ExtResource( 4 )]

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 70.0
rect_scale = Vector2( 1.75, 1.75 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultySelect" parent="." instance=ExtResource( 5 )]
layer = 2
offset = Vector2( 1280, 0 )
transform = Transform2D( 1, 0, 0, 1, 1280, 0 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_TextureButton_pressed"]
[connection signal="change_music" from="DifficultySelect" to="." method="_on_DifficultySelect_change_music"]
